KAN-378 <message : code optimization>